[project]
name = "pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.135.2",
    "itsdangerous>=2.2.0",
    "pwdlib>=0.3.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "redis>=7.4.0",
    "sentry-sdk>=2.56.0",
    "sqlalchemy>=2.0.48",
]
[tools.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]


[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
extend-per-file-ignores = { "alembic/versions/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"
